//
// VehBrake.proto
//
//
syntax = "proto3";


package vxII;


enum BrakePedalStatus {
    unavailable_brake_pedal_status  = 0;    // -- Vehicle brake pedal detector is unavailable
    off_brake_pedal_status          = 1;    // -- Vehicle's brake pedal is not pressed
    on_brake_pedal_status           = 2;    // -- Vehicle's brake pedal is pressed
}

// BIT STRING
enum BrakeAppliedStatus {
    unavailable_brake_applied_status    = 0;    // -- When set, the brake applied status is unavailable
    leftFront_brake_applied_status      = 1;    // -- Left Front Active
    leftRear_brake_applied_status       = 2;    // -- Left Rear Active
    rightFront_brake_applied_status     = 3;    // -- Right Front Active
    rightRear_brake_applied_status      = 4;    // -- Right Rear Active
}

enum BrakeBoostApplied {
    unavailable_brake_boost_applied     = 0;    // -- Vehicle not equipped with brake boost
    //-- or brake boost data is unavailable
    off_brake_boost_applied             = 1;    // -- Vehicle's brake boost is off
    on_brake_boost_applied              = 2;    // -- Vehicle's brake boost is on (applied)
}

enum TractionControlStatus {
    unavailable_traction_control_status = 0;    // -- Not Equipped with traction control
    // -- or traction control status is unavailable
    off_traction_control_status         = 1;    // -- traction control is Off
    on_traction_control_status          = 2;    // -- traction control is On (but not Engaged)
    engaged_traction_control_status     = 3;    // -- traction control is Engaged
}

enum AntiLockBrakeStatus {
    unavailable_antilock_brake_status   = 0;    // -- Vehicle Not Equipped with ABS Brakes
    // -- or ABS Brakes status is unavailable
    off_antilock_brake_status           = 1;    // -- Vehicle's ABS are Off
    on_antilock_brake_status            = 2;    // -- Vehicle's ABS are On ( but not Engaged )
    engaged_antilock_brake_status       = 3;    // -- Vehicle's ABS control is Engaged on any wheel
}

enum StabilityControlStatus {
    unavailable_stability_control_status    = 0;    // -- Not Equipped with SC
    // -- or SC status is unavailable
    off_stability_control_status            = 1;    // -- Off
    on_stability_control_status             = 2;    // -- On or active (but not engaged)
    engaged_stability_control_status        = 3;    // -- stability control is Engaged
}

enum AuxiliaryBrakeStatus {
    unavailable_auxiliary_brake_status      = 0;    // -- Vehicle Not Equipped with Aux Brakes
    // -- or Aux Brakes status is unavailable
    off_auxiliary_brake_status              = 1;    // -- Vehicle's Aux Brakes are Off
    on_auxiliary_brake_status               = 2;    // -- Vehicle's Aux Brakes are On ( Engaged )
    reserved_auxiliary_brake_status         = 3;
}


message BrakeSystemStatus {
    BrakePedalStatus brakePadel     = 1;
    uint32 wheelBrakes              = 2;    // BIT STRING of BrakeAppliedStatus
    TractionControlStatus traction  = 3;
    AntiLockBrakeStatus abs         = 4;
    StabilityControlStatus scs      = 5;
    BrakeBoostApplied brakeBoost    = 6;
    AuxiliaryBrakeStatus auxBrakes  = 7;
}


